uriloader/exthandler/nsMIMEInfoImpl.cpp
@@ -358,10 +358,26 @@ nsMIMEInfoBase::LaunchWithURI(nsIURI* aURI)
     rv = localHandler->GetExecutable(getter_AddRefs(executable));
     NS_ENSURE_SUCCESS(rv, rv);
 
+    // get the nsILocalFile version of the doc to launch with
     rv = GetLocalFileFromURI(aURI, getter_AddRefs(docToLoad));
-    NS_ENSURE_SUCCESS(rv, rv);
+    if (NS_FAILED(rv)) {
 
-    return LaunchWithIProcess(executable, docToLoad);
+      // If we don't have a file, we must be a protocol handler        
+      NS_ASSERTION(mClass == eProtocolInfo,
+                   "nsMIMEInfoBase should be a protocol handler");
+
+      // so pass the entire URI to the handler.
+      nsCAutoString spec;
+      aURI->GetSpec(spec);
+      return LaunchWithIProcess(executable, spec);
+    }
+
+    // note that the file pointed to by docToLoad could possibly have
+    // originated as a file: URI if we're in some non-browser application.
+
+    nsCAutoString path;
+    docToLoad->GetNativePath(path);
+    return LaunchWithIProcess(executable, path);
   }
   else if (mPreferredAction == useSystemDefault) {
     if (mClass == eProtocolInfo)
@@ -389,9 +405,9 @@ nsMIMEInfoBase::CopyBasicDataTo(nsMIMEInfoBase* aOther)
 
 /* static */
 nsresult
-nsMIMEInfoBase::LaunchWithIProcess(nsIFile* aApp, nsIFile* aFile)
+nsMIMEInfoBase::LaunchWithIProcess(nsIFile* aApp, const nsCString& aArg)
 {
-  NS_ASSERTION(aApp && aFile, "Unexpected null pointer, fix caller");
+  NS_ASSERTION(aApp, "Unexpected null pointer, fix caller");
 
   nsresult rv;
   nsCOMPtr<nsIProcess> process = do_CreateInstance(NS_PROCESS_CONTRACTID, &rv);
@@ -401,13 +417,10 @@ nsMIMEInfoBase::LaunchWithIProcess(nsIFile* aApp, nsIFile* aFile)
   if (NS_FAILED(rv = process->Init(aApp)))
     return rv;
 
-  nsCAutoString path;
-  aFile->GetNativePath(path);
-
-  const char * strPath = path.get();
+  const char *string = aArg.get();
 
   PRUint32 pid;
-  return process->Run(PR_FALSE, &strPath, 1, &pid);
+  return process->Run(PR_FALSE, &string, 1, &pid);
 }
 
 /* static */
@@ -450,6 +463,9 @@ nsMIMEInfoImpl::LaunchDefaultWithFile(nsIFile* aFile)
   if (!mDefaultApplication)
     return NS_ERROR_FILE_NOT_FOUND;
 
-  return LaunchWithIProcess(mDefaultApplication, aFile);
+  nsCAutoString nativePath;
+  aFile->GetNativePath(nativePath);
+  
+  return LaunchWithIProcess(mDefaultApplication, nativePath);
 }
 
